--- a/appsettings.json
+++ b/appsettings.json
@@ -9,5 +9,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "EmailConfiguration": {
+    "From": "isecleipweb@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 465,
+    "UserName": "isecleipweb@gmail.com",
+    "Password": "Coimbra_123"
+  },
   "AllowedHosts": "*"
 }
